--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "clsx": "^1.2.1",
+    "date-fns": "^2.29.3",
+    "gray-matter": "^4.0.3",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -18,5 +20,10 @@
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "sass": "^1.55.0"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
