--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
     "gray-matter": "^4.0.3",
+    "highlight.js": "^11.6.0",
     "next": "12.3.1",
     "next-mdx-remote": "^4.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "rehype-highlight": "^5.0.2"
   },
   "devDependencies": {
     "eslint": "8.24.0",
